--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,12 +6,8 @@ edition = "2021"
 [dependencies]
 byteorder = "1"
 clap = { version = "4", features = ["derive"] }
-base64 = "0.22"
-ed25519-dalek = { version = "2", features = ["rand_core"] }
 thiserror = "2"
-rand = "0.8"
 serde = { version = "1", features = ["derive"] }
+serde_json = "1"
 toml = "0.8"
-
-[dev-dependencies]
-tempfile = "3"
+base64 = "0.22"
